(PS-6072) Parstream Kafka Consumer

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-#
+# mvn build
+target/
+dependency-reduced-pom.xml
+
+# eclispse IDE
+.checkstyle
+.classpath
+.project
+.settings/
+.metadata/
+.recommenders/
